KOGITO-6664 Added annotations and description from the WF definition … (#2079)
* KOGITO-6664 Added annotations and description from the WF definition to the Open API file

* KOGITO-6664 Changed TagResourceGenerator to receive KogitoWorkflowProcess and be static

Signed-off-by: Helber Belmiro <helber.belmiro@gmail.com>

* KOGITO-6664 Changed to map wf description to Open API tag rather than description

Signed-off-by: Helber Belmiro <helber.belmiro@gmail.com>

* KOGITO-6664 Switched metadata TAG from List to Collection

Signed-off-by: Helber Belmiro <helber.belmiro@gmail.com>